Final changes to blatt0.ipynb

--- a/Übungsblatt 0/blatt0.ipynb
+++ b/Übungsblatt 0/blatt0.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dimension: 3 | Size: 128x5x1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 128 1x4 Zeilenvektoren\n",
     "tensor1 = torch.empty(size=(128, 1, 4))\n",
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -286,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# todo"
+    "# Keine Ahnung :("
    ]
   },
   {
@@ -306,78 +298,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 7.6510, 14.3493,  9.1092,  6.5699])\n",
-      "-64 tensor(38.6160)\n",
-      "-63 tensor(34.8331)\n",
-      "-62 tensor(40.6311)\n",
-      "-61 tensor(43.1486)\n",
-      "-60 tensor(44.8363)\n",
-      "-59 tensor(39.9533)\n",
-      "-58 tensor(36.3733)\n",
-      "-57 tensor(35.2354)\n",
-      "-56 tensor(35.5582)\n",
-      "-55 tensor(49.9864)\n",
-      "-54 tensor(42.0920)\n",
-      "-53 tensor(30.5985)\n",
-      "-52 tensor(39.1853)\n",
-      "-51 tensor(33.0203)\n",
-      "-50 tensor(33.3303)\n",
-      "-49 tensor(42.0068)\n",
-      "-48 tensor(41.0997)\n",
-      "-47 tensor(37.4175)\n",
-      "-46 tensor(27.2086)\n",
-      "-45 tensor(48.5374)\n",
-      "-44 tensor(33.7429)\n",
-      "-43 tensor(40.1726)\n",
-      "-42 tensor(43.8326)\n",
-      "-41 tensor(44.5626)\n",
-      "-40 tensor(43.0822)\n",
-      "-39 tensor(27.8054)\n",
-      "-38 tensor(42.3847)\n",
-      "-37 tensor(51.5169)\n",
-      "-36 tensor(30.2769)\n",
-      "-35 tensor(37.7965)\n",
-      "-34 tensor(47.3535)\n",
-      "-33 tensor(40.3328)\n",
-      "-32 tensor(44.5035)\n",
-      "-31 tensor(40.5655)\n",
-      "-30 tensor(33.7614)\n",
-      "-29 tensor(37.7862)\n",
-      "-28 tensor(44.8890)\n",
-      "-27 tensor(42.9860)\n",
-      "-26 tensor(48.0858)\n",
-      "-25 tensor(47.8337)\n",
-      "-24 tensor(34.6704)\n",
-      "-23 tensor(37.8976)\n",
-      "-22 tensor(41.7185)\n",
-      "-21 tensor(44.8371)\n",
-      "-20 tensor(51.3717)\n",
-      "-19 tensor(30.7204)\n",
-      "-18 tensor(35.0581)\n",
-      "-17 tensor(30.2798)\n",
-      "-16 tensor(46.4961)\n",
-      "-15 tensor(41.2180)\n",
-      "-14 tensor(49.4041)\n",
-      "-13 tensor(40.8899)\n",
-      "-12 tensor(35.8394)\n",
-      "-11 tensor(36.7900)\n",
-      "-10 tensor(53.3819)\n",
-      "-9 tensor(33.7459)\n",
-      "-8 tensor(37.2284)\n",
-      "-7 tensor(33.4187)\n",
-      "-6 tensor(37.2260)\n",
-      "-5 tensor(42.0874)\n",
-      "-4 tensor(33.8088)\n",
-      "-3 tensor(41.4430)\n",
-      "-2 tensor(25.1710)\n",
-      "-1 tensor(44.2799)\n"
+      "tensor([ 6.3646,  9.4997,  8.3627, 13.0614])\n",
+      "-64 tensor(42.9654)\n",
+      "-63 tensor(31.7186)\n",
+      "-62 tensor(31.3594)\n",
+      "-61 tensor(36.8333)\n",
+      "-60 tensor(35.6486)\n",
+      "-59 tensor(40.8049)\n",
+      "-58 tensor(48.5442)\n",
+      "-57 tensor(46.2018)\n",
+      "-56 tensor(43.6964)\n",
+      "-55 tensor(45.2826)\n",
+      "-54 tensor(41.3147)\n",
+      "-53 tensor(40.7031)\n",
+      "-52 tensor(42.3290)\n",
+      "-51 tensor(44.0963)\n",
+      "-50 tensor(39.1442)\n",
+      "-49 tensor(40.1820)\n",
+      "-48 tensor(34.4013)\n",
+      "-47 tensor(39.9766)\n",
+      "-46 tensor(35.9168)\n",
+      "-45 tensor(35.8787)\n",
+      "-44 tensor(42.6101)\n",
+      "-43 tensor(39.5392)\n",
+      "-42 tensor(51.7934)\n",
+      "-41 tensor(41.6621)\n",
+      "-40 tensor(53.6394)\n",
+      "-39 tensor(54.3645)\n",
+      "-38 tensor(38.1608)\n",
+      "-37 tensor(42.5500)\n",
+      "-36 tensor(27.6144)\n",
+      "-35 tensor(37.7383)\n",
+      "-34 tensor(29.3895)\n",
+      "-33 tensor(37.9923)\n",
+      "-32 tensor(39.7535)\n",
+      "-31 tensor(38.9855)\n",
+      "-30 tensor(31.0137)\n",
+      "-29 tensor(39.3224)\n",
+      "-28 tensor(39.5453)\n",
+      "-27 tensor(42.8618)\n",
+      "-26 tensor(33.8729)\n",
+      "-25 tensor(35.8098)\n",
+      "-24 tensor(30.7809)\n",
+      "-23 tensor(49.1238)\n",
+      "-22 tensor(40.0705)\n",
+      "-21 tensor(50.1641)\n",
+      "-20 tensor(32.2805)\n",
+      "-19 tensor(45.6432)\n",
+      "-18 tensor(49.4663)\n",
+      "-17 tensor(37.8013)\n",
+      "-16 tensor(49.4458)\n",
+      "-15 tensor(35.5240)\n",
+      "-14 tensor(34.0902)\n",
+      "-13 tensor(41.8931)\n",
+      "-12 tensor(35.3272)\n",
+      "-11 tensor(35.7740)\n",
+      "-10 tensor(37.7819)\n",
+      "-9 tensor(41.1306)\n",
+      "-8 tensor(45.6116)\n",
+      "-7 tensor(42.5508)\n",
+      "-6 tensor(35.1275)\n",
+      "-5 tensor(35.6386)\n",
+      "-4 tensor(46.5225)\n",
+      "-3 tensor(48.2481)\n",
+      "-2 tensor(30.0895)\n",
+      "-1 tensor(49.8007)\n"
      ]
     }
    ],
@@ -409,16 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([65,  3,  9,  5, 15, 23, 97, 39, 17, 43, 11, 29, 59, 49, 33, 85, 55, 67,\n",
-      "        53, 31, 75,  7, 13, 69, 35, 61, 81, 99, 73, 25,  1, 37, 79, 71, 47, 93,\n",
-      "        95, 41, 83, 21, 57, 87, 27, 89, 91, 51, 63, 77, 19, 45, 12,  0, 52,  2,\n",
+      "tensor([97, 65, 45, 55, 11, 19, 23, 49, 39,  1, 95, 15,  7, 69, 85, 57, 99, 33,\n",
+      "        75, 31, 35, 25, 81,  9,  5, 59, 17, 71,  3, 73, 63, 91, 47, 21, 13, 61,\n",
+      "        89, 83, 67, 41, 77, 27, 37, 79, 29, 87, 93, 53, 43, 51, 12,  0, 52,  2,\n",
       "        54,  4, 56,  6, 58,  8, 60, 10, 62, 14, 64, 16, 66, 18, 68, 20, 70, 22,\n",
       "        72, 24, 74, 26, 76, 28, 78, 30, 80, 32, 82, 34, 84, 36, 86, 50, 88, 38,\n",
       "        90, 40, 92, 42, 94, 44, 96, 46, 98, 48])\n"
