--- a/Übungsblatt 00/blatt0.ipynb
+++ b/Übungsblatt 00/blatt0.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning für Visual Computing: Übungsblat 00\n",
+    "# Deep Learning für Visual Computing: Übungsblatt 00\n",
     "\n",
-    "Von: **Maximilian Mundt, Radmehr Nouri Inanlou**\n",
+    "**Von: Maximilian Mundt, Radmehr Nouri Inanlou**\n",
     "\n",
-    "Abgabe: **13.04.2022**"
+    "**Abgabe: 13.04.2022**"
    ]
   },
   {
