Aufgaben weiter bearbeitet

--- a/Übungsblatt 02/blatt02.ipynb
+++ b/Übungsblatt 02/blatt02.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rosenbrock(x, y, a, b):\n",
     "    f = (a - x) ** 2 + b * (y - x**2) ** 2\n",
     "\n",
-    "    gradient = np.array([-2 * a + 4 * b * x**3 - 4 * b * x * y + 2 * x, 2 * b * (y - x**2)])\n",
+    "    gradient = np.array([\n",
+    "        -2 * a + 4 * b * x**3 - 4 * b * x * y + 2 * x,\n",
+    "        2 * b * (y - x**2)\n",
+    "    ])\n",
     "\n",
     "    return f, gradient\n"
    ]
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -295,8 +298,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Erstellen Sie einen Tensor, der für $x, y = (−1, −1)$ speichert und stellen Sie sicher, dass\n",
+    "für diesen ein Gradient berechnet wird."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-1., -1.], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "theta = torch.Tensor((-1, -1))\n",
+    "theta.requires_grad_()\n",
+    "\n",
+    "print(theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wählen Sie einen Optimierungsalgorithmus aus dem `torch.optim` Submodul aus und\n",
+    "erzeugen Sie eine Instanz dieses Optimierers bei dem Sie den zuvor erzeugten Tensor\n",
+    "als Parameter übergeben."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.optim import Adam\n",
+    "\n",
+    "optimizer = Adam([theta])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementieren Sie eine Funktion `rosenbrock_th(x, y, a, b)`, die nur Gleichung 1 berechnet (die Funktion muss nicht den Wert des Gradienten zurückgeben)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rosenbrock_th(x, y, a, b):\n",
+    "    return (a - x) ** 2 + b * (y - x**2) ** 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimieren Sie den Parameter für 1000 Schritte. Achten Sie darauf, dass in der Schleife\n",
+    "Ihres Programms, `optimizer.zero_grad()`, `loss.backward()` und `optimizer.step()`\n",
+    "in der richtigen Reihenfolge aufgerufen werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for _ in range(1000):\n",
+    "#     optimizer.zero_grad()\n",
+    "#     theta.backward()\n",
+    "#     optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualisieren Sie die Rosenbrock Funktion, ihr Minimum und die Punkte, die während der Optimierung erzeugt wurden, in einem Plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementieren Sie eine Klasse, die von torch.nn.Module erbt. Stellen Sie sicher,\n",
+    "dass im Konstruktor Ihrer Klasse, der Konstruktor der Elternklasse aufgerufen wird.\n",
+    "Dar¨uber hinaus soll der Konstruktor Ihrer Klasse die Parameter $a', b'$ als Membervariablen hinzufügen und mit zuf¨alligen Werten initialisieren. Zusätzlich soll Ihre Klasse\n",
+    "noch die Methode `forward(self, xy)` implementieren, die den Funktionswert der\n",
+    "Rosenbrock Funktion für die Argumente $x, y$ mit den Parametern $a', b'$\n",
+    "zurückgibt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Model(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.a_prime = np.random.rand()\n",
+    "        self.b_prime = np.random.rand()\n",
+    "\n",
+    "    def forward(self, x, y):\n",
+    "        return rosenbrock_th(x, y, self.a_prime, self.b_prime)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Erzeugen Sie eine Instanz Ihrer Klasse und verwenden Sie den mini-batch Ansatz\n",
+    "aus der Vorlesung zusammen mit den oben beschrieben Techniken um den erwarteten L1-Fehler zwischen der Schätzung Ihrer Klasse $f'(x, y)$ und der tatsächlichen Werten\n",
+    "$z = f(x, y)$ zu minimieren"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualisieren Sie die Fehlerkurve für die ersten 100 Schritte der Optimierung bei einer\n",
+    "Batchgröße von 1, 32 und 128 in einem Plot. Welchen Einfluss hat die Batchgröße auf\n",
+    "das Konvergenzverhalten der Optimierung?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
