--- a/Übungsblatt 03/blatt03.ipynb
+++ b/Übungsblatt 03/blatt03.ipynb
@@ -75,10 +75,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7708144fb1a5eac3b2a7fa369f311f63d9e4c5cc3c4e3a4e9a3afaa05c1b8d48"
+   "hash": "05e1334b1e821dbcbabad47fa6c3b15cd156c9f620a33f6e653d7b3fa5feadb9"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('tensorflow')",
+   "display_name": "Python 3.10.4 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
