--- a/Übungsblatt 04/blatt04.ipynb
+++ b/Übungsblatt 04/blatt04.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Keine Ahnung, was mit dem Zusammenfügen gemeint ist. Spielt ja im Endeffekt keine Rolle, da wir sowieso später die Instanz von ``CircleDataset`` nutzen*. Oder war hier nur wichtig, wie man über den Dataloader iteriert? Für den Fall haben wir noch aufgeschrieben, wie die For-Schleife aussehen würde."
+    "*Keine Ahnung, was mit dem Zusammenfügen gemeint ist. Spielt ja im Endeffekt keine Rolle, da wir sowieso später die Instanz von ``CircleDataset`` nutzen. Oder war hier nur wichtig, wie man über den Dataloader iteriert? Für den Fall haben wir noch aufgeschrieben, wie die For-Schleife aussehen würde.*"
    ]
   },
   {
